--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/rest": "^21.0.2",
     "octokit": "^4.0.2"
   },
   "devDependencies": {
