rename actions more succinctly

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -7,7 +7,7 @@
 # If this workflow is run from a feature branch, it will act as an additional CI
 # check and fail if the checked-in `dist/` directory does not match what is
 # expected from the build.
-name: Check Transpiled JavaScript
+name: Checks
 
 on:
   pull_request:
@@ -26,7 +26,7 @@ permissions:
 
 jobs:
   check-dist:
-    name: Check dist/
+    name: Dist
     runs-on: ubuntu-latest
 
     steps:
