--- a/action.yml
+++ b/action.yml
@@ -1,170 +1,84 @@
-name: "Diff Size"
-description: |
-  This action adds a label to each pull request based on the number of lines changes. The
-  calculation excludes vendored and generated files as indicated by the `.gitattributes` file.
+name: 'PR Size'
+description:
+  'Add a label to each pull request based on the number of lines changed.'
+author: 'Matt Dowdell'
 
-  There is a limit to how much code can be effectively reviewed in a single pull request. A
-  [Smartbear study][1] found that reviewing more than 200-400 lines reduces the ability of reviewers
-  to identify defects. Smaller changes can also support a high deployment frequency, as they are
-  usually less risky and require less effort to qualify.
-
-  To allow better identification of problem pull requests, each pull request is categorised
-  as follows. The thresholds for each category and the label names can be adjusted using the action
-  inputs. The labels will be created when the action is run for the first time.
-
-  | Category          | Lines changed | Label      |
-  | ----------------- | ------------- | ---------- |
-  | Extra Small       | 1-10          | `size/XS`  |
-  | Small             | 11-100        | `size/S`   |
-  | Medium            | 101-200       | `size/M`   |
-  | Large             | 201-400       | `size/L`   |
-  | Extra Large       | 401-800       | `size/XL`  |
-  | Extra Extra Large | 801+          | `size/XXL` |
-
-  This size calculation will be the number of lines removed plus the number of lines added. Any
-  files that have been marked as vendored or generated in `.gitattributes` are excluded from the
-  calculation, for example:
-
-  ```
-  vendor/**    linguist-vendored
-  generated/** linguist-generated
-  ```
-
-  More details on `.gitattributes` overrides can be found [here][2]. A file that was newly
-  classified as generated or vendored will be removed from the calculation. Conversely, a modified
-  file that has been unclassified will be included, but only the changed lines will be considered.
-
-  [1]: https://smartbear.com/learn/code-review/best-practices-for-peer-code-review
-  [2]: https://github.com/github-linguist/linguist/blob/main/docs/overrides.md
+# https://docs.github.com/en/actions/sharing-automations/creating-actions/metadata-syntax-for-github-actions#branding
+branding:
+  icon: 'bookmark' # OR git-pull-request?
+  color: 'purple'
 
 inputs:
   xs-threshold:
-    description: "The maximum number of lines changed for an extra small label to be assigned (default: 10)."
-    required: true
-    default: "10"
+    description:
+      'The maximum number of lines changed for an extra small label to be
+      assigned (default: 10).'
+    required: false
+    default: '10'
   s-threshold:
-    description: "The maximum number of lines changed for a small label to be assigned (default: 100)."
-    required: true
-    default: "100"
+    description:
+      'The maximum number of lines changed for a small label to be assigned
+      (default: 100).'
+    required: false
+    default: '100'
   m-threshold:
-    description: "The maximum number of lines changed for a medium label to be assigned (default: 200)."
-    required: true
-    default: "200"
+    description:
+      'The maximum number of lines changed for a medium label to be assigned
+      (default: 200).'
+    required: false
+    default: '200'
   l-threshold:
-    description: "The maximum number of lines changed for a large label to be assigned (default: 400)."
-    required: true
-    default: "400"
+    description:
+      'The maximum number of lines changed for a large label to be assigned
+      (default: 400).'
+    required: false
+    default: '400'
   xl-threshold:
-    description: "The maximum number of lines changed for a extra large label to be assigned (default: 800)."
-    required: true
-    default: "800"
+    description:
+      'The maximum number of lines changed for a extra large label to be
+      assigned (default: 800).'
+    required: false
+    default: '800'
   xs-label:
-    description: "The name of the label for very small number of lines changed."
-    required: true
-    default: "size/XS"
+    description: 'The name of the label for very small number of lines changed.'
+    required: false
+    default: 'size/XS'
   s-label:
-    description: "The name of the label for small number of lines changed."
-    required: true
-    default: "size/S"
+    description: 'The name of the label for small number of lines changed.'
+    required: false
+    default: 'size/S'
   m-label:
-    description: "The name of the label for medium number of lines changed."
-    required: true
-    default: "size/M"
+    description: 'The name of the label for medium number of lines changed.'
+    required: false
+    default: 'size/M'
   l-label:
-    description: "The name of the label for large number of lines changed."
-    required: true
-    default: "size/L"
+    description: 'The name of the label for large number of lines changed.'
+    required: false
+    default: 'size/L'
   xl-label:
-    description: "The name of the label for very large number of lines changed."
-    required: true
-    default: "size/XL"
+    description: 'The name of the label for very large number of lines changed.'
+    required: false
+    default: 'size/XL'
   xxl-label:
-    description: "The name of the label for very, very large number of lines changed."
-    required: true
-    default: "size/XXL"
+    description:
+      'The name of the label for very, very large number of lines changed.'
+    required: false
+    default: 'size/XXL'
+  github-token:
+    description: TODO
+    required: false
+    default: ${{ github.token }}
 
 outputs:
   label:
-    description: "The label assigned to the pull request."
-    value: ${{ steps.label.outputs.label }}
+    description: 'The label assigned to the pull request.'
   size:
     description: "The calculated size of the pull request's changes."
-    value: ${{ steps.size.outputs.size }}
   includes:
-    description: "The files included in the size calculation."
-    value: ${{ steps.size.outputs.includes }}
+    description: 'The files included in the size calculation.'
   excludes:
-    description: "The files excluded from the size calculation."
-    value: ${{ steps.excludes.outputs.excludes }}
+    description: 'The files excluded from the size calculation.'
 
 runs:
-  using: "composite"
-  steps:
-    - name: Create labels
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      env:
-        # workaround for https://github.com/actions/toolkit/issues/1124
-        xs_label: ${{ inputs.xs-label }}
-        s_label: ${{ inputs.s-label }}
-        m_label: ${{ inputs.m-label }}
-        l_label: ${{ inputs.l-label }}
-        xl_label: ${{ inputs.xl-label }}
-        xxl_label: ${{ inputs.xxl-label }}
-      with:
-        script: |
-          const script = require('./src/createLabels.js')
-          await script({context, core, github});
-
-    - name: Gather excludes
-      id: excludes
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      with:
-        script: |
-          const script = require('./src/gatherExcludes.js')
-          await script({context, core, exec});
-
-    - name: Calculate size
-      id: size
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      env:
-        excludes: ${{ steps.excludes.outputs.excludes }}
-      with:
-        script: |
-          const script = require('./src/calculateSize.js')
-          await script({context, core, exec});
-
-    - name: Select label
-      id: label
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      env:
-        size: ${{ steps.size.outputs.size }}
-        xs_label: ${{ inputs.xs-label }}
-        s_label: ${{ inputs.s-label }}
-        m_label: ${{ inputs.m-label }}
-        l_label: ${{ inputs.l-label }}
-        xl_label: ${{ inputs.xl-label }}
-        xxl_label: ${{ inputs.xxl-label }}
-        xs_threshold: ${{ inputs.xs-threshold }}
-        s_threshold: ${{ inputs.s-threshold }}
-        m_threshold: ${{ inputs.m-threshold }}
-        l_threshold: ${{ inputs.l-threshold }}
-        xl_threshold: ${{ inputs.xl-threshold }}
-      with:
-        script: |
-          const script = require('./src/selectLabel.js')
-          await script({core});
-
-    - name: Assign label
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      env:
-        label: ${{ steps.label.outputs.label }}
-        xs_label: ${{ inputs.xs-label }}
-        s_label: ${{ inputs.s-label }}
-        m_label: ${{ inputs.m-label }}
-        l_label: ${{ inputs.l-label }}
-        xl_label: ${{ inputs.xl-label }}
-        xxl_label: ${{ inputs.xxl-label }}
-      with:
-        script: |
-          const script = require('./src/assignLabel.js')
-          await script({context, github});
+  using: node20
+  main: dist/index.js
