--- a/.github/linters/.markdown-lint.yml
+++ b/.github/linters/.markdown-lint.yml
@@ -2,6 +2,10 @@
 MD004:
   style: dash
 
+# Ignore line-length for tables
+MD013:
+  tables: false
+
 # Ordered list item prefix
 MD029:
   style: one
