--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,23 +4,5 @@ updates:
     directory: /
     schedule:
       interval: weekly
-    groups:
-      actions-minor:
-        update-types:
-          - minor
-          - patch
-
-  - package-ecosystem: npm
-    directory: /
-    schedule:
-      interval: weekly
-    groups:
-      npm-development:
-        dependency-type: development
-        update-types:
-          - minor
-          - patch
-      npm-production:
-        dependency-type: production
-        update-types:
-          - patch
+      day: monday
+      time: 08:00
