--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "PR Size"
+name: "PR Sizer"
 description: "Add a label to each pull request based on the number of lines changed."
 author: "Matt Dowdell"
 
@@ -85,7 +85,7 @@ runs:
   steps:
     - name: Run
       id: run
-      uses: actions/github-script@v7
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
           const script = require('./index.js')
