--- a/action.yml
+++ b/action.yml
@@ -88,7 +88,7 @@ runs:
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       with:
         script: |
-          const script = require('./index.js')
+          const script = require('${{ github.action_path }}/index.js')
           await script({context, core, exec, github})
         github-token: ${{ inputs.github-token }}
       env:
