Make whitespace ignore behaviour configurable

--- a/action.yml
+++ b/action.yml
@@ -9,8 +9,7 @@ branding:
 
 inputs:
   xs-threshold:
-    description:
-      "The maximum number of lines changed for an extra small label to be assigned."
+    description: "The maximum number of lines changed for an extra small label to be assigned."
     required: false
     default: "10"
   s-threshold:
@@ -65,6 +64,11 @@ inputs:
     description: The token to use for managing labels.
     required: false
     default: ${{ github.token }}
+  ignore-whitespace:
+    description:
+      "Whether to ignore whitespace changes at the end of a line. Set to 'true' to enable."
+    required: false
+    default: "false"
 
 outputs:
   label:
@@ -104,3 +108,4 @@ runs:
         xl_label: ${{ inputs.xl-label }}
         xxl_label: ${{ inputs.xxl-label }}
         color: ${{ inputs.color }}
+        ignore_whitespace: ${{ inputs.ignore-whitespace }}
