try ignore-whitespace option

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Size
         id: size
         uses: ./
+        with:
+          ignore-whitespace: false
 
       - name: Output
         run: |
