feat: add options to ignore deleted files and lines

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,11 @@ jobs:
           echo size=${SIZE}
           echo includes=${INCLUDES}
           echo excludes=${EXCLUDES}
+          echo ignores=${IGNORES}
         env:
           LABEL: ${{ steps.size.outputs.label }}
           SIZE: ${{ steps.size.outputs.size }}
           INCLUDES: ${{ steps.size.outputs.includes }}
           EXCLUDES: ${{ steps.size.outputs.excludes }}
+          IGNORES: ${{ steps.size.outputs.ignores }}
+
