--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,14 @@ inputs:
     description: The token to use for managing labels.
     required: false
     default: ${{ github.token }}
+  ignore-deleted-files:
+    description: "Ignore files deletion when calculating the number of lines changed."
+    required: false
+    default: "false"
+  ignore-deleted-lines:
+    description: "Ignore lines deletion when calculating the number of lines changed."
+    required: false
+    default: "false"
 
 outputs:
   label:
@@ -79,6 +87,9 @@ outputs:
   excludes:
     description: "The files excluded from the size calculation."
     value: ${{ steps.run.outputs.excludes }}
+  ignores:
+    description: "The files ignored from the size calculation."
+    value: ${{ steps.run.outputs.ignores }}
 
 runs:
   using: "composite"
@@ -104,3 +115,5 @@ runs:
         xl_label: ${{ inputs.xl-label }}
         xxl_label: ${{ inputs.xxl-label }}
         color: ${{ inputs.color }}
+        ignore_deleted_files: ${{ inputs.ignore-deleted-files }}
+        ignore_deleted_lines: ${{ inputs.ignore-deleted-lines }}
