--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+---
 name: CI
 
 on:
@@ -46,6 +47,25 @@ jobs:
           INCLUDES: ${{ steps.size.outputs.includes }}
           EXCLUDES: ${{ steps.size.outputs.excludes }}
           IGNORES: ${{ steps.size.outputs.ignores }}
+
+  yamlfmt:
+    name: Format YAML
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
+      - name: Setup Go
+        uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
+
+      - name: Run
+        run: |
+          go install github.com/google/yamlfmt/cmd/yamlfmt@latest
+          yamlfmt -lint .
 
   zizmor:
     name: Zizmor Scan
