--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,4 @@
+---
 name: "PR Sizer"
 description: "Add a label to each pull request based on the number of lines changed."
 author: "Matt Dowdell"
@@ -9,28 +10,23 @@ branding:
 
 inputs:
   xs-threshold:
-    description:
-      "The maximum number of lines changed for an extra small label to be assigned."
+    description: "The maximum number of lines changed for an extra small label to be assigned."
     required: false
     default: "10"
   s-threshold:
-    description:
-      "The maximum number of lines changed for a small label to be assigned."
+    description: "The maximum number of lines changed for a small label to be assigned."
     required: false
     default: "100"
   m-threshold:
-    description:
-      "The maximum number of lines changed for a medium label to be assigned."
+    description: "The maximum number of lines changed for a medium label to be assigned."
     required: false
     default: "200"
   l-threshold:
-    description:
-      "The maximum number of lines changed for a large label to be assigned."
+    description: "The maximum number of lines changed for a large label to be assigned."
     required: false
     default: "400"
   xl-threshold:
-    description:
-      "The maximum number of lines changed for a extra large label to be assigned."
+    description: "The maximum number of lines changed for a extra large label to be assigned."
     required: false
     default: "800"
   xs-label:
@@ -99,8 +95,10 @@ runs:
       uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
       with:
         script: |
-          const script = require('${{ github.action_path }}/index.js')
-          await script({context, core, exec, github})
+          const path = require('path');
+
+          const script = require(path.join(process.env.GITHUB_ACTION_PATH, 'index.js');
+          await script({context, core, exec, github});
         github-token: ${{ inputs.github-token }}
       env:
         xs_threshold: ${{ inputs.xs-threshold }}
