--- a/.github/workflows/ci_target.yaml
+++ b/.github/workflows/ci_target.yaml
@@ -2,7 +2,7 @@
 name: CI (target)
 
 on:
-  pull_request_target:
+  pull_request_target: # zizmor: ignore[dangerous-triggers]
     branches:
       - main
 
