Testing pull_request_target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Size
         id: size
         uses: ./
+        with:
+          dry-run: false
 
       - name: Output
         run: |
