Test pr target workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Size
         id: size
         uses: ./
-        # with:
-        #   dry-run: false
+        with:
+          dry-run: false
 
       - name: Output
         run: |
