Move ref to right workflow

--- a/.github/workflows/ci_target.yaml
+++ b/.github/workflows/ci_target.yaml
@@ -25,6 +25,7 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+          ref: ${{ github.head_ref }}
 
       - name: Size
         id: size
